Enable Java 8 Support (#1)